Fix: Input feild(navbar) align center success - 폼 style속성에 justify-content: center; 추가하여 해결

--- a/youtube_home_design.css
+++ b/youtube_home_design.css
@@ -6,13 +6,13 @@
 #search-form {
     display: flex;
     align-items: center;
+    justify-content: center;
 }
 
 #center {
 
     width: 60%;
     display: flex;
-    
     justify-content: center;
     align-items: center;
 
